--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 * {
     font-family: 'Oswald', sans-serif;
+	box-sizing: border-box;
 }
 
 html, body, div, span, applet, object, iframe,
